--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><body><h1>Vibe IDE</h1></body></html>
+<!doctype html><html><body><h1>Vibe IDE — Stable Edition</h1></body></html>
