--- a/index.html
+++ b/index.html
@@ -1,63 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vibe IDE — Stable Edition</title>
-  <style>
-    html,body{margin:0;height:100%;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial,'Noto Sans','Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol'}
-    .bg{position:fixed;inset:0;background:radial-gradient(1200px 800px at 20% -10%, #c7d2fe55, transparent 60%), 
-                                  radial-gradient(1000px 700px at 120% 20%, #a7f3d055, transparent 60%),
-                                  linear-gradient(180deg,#0b1220,#0b1220 60%,#0e1527)}
-    .glass{backdrop-filter: blur(14px); background: #0b1220cc; border:1px solid #ffffff22; border-radius:20px; padding:24px; box-shadow:0 10px 40px #0008}
-    .brand{display:flex;gap:12px;align-items:center}
-    .dot{width:12px;height:12px;border-radius:999px;background:#34d399;box-shadow:0 0 14px #34d399aa}
-    h1{color:#fff;margin:0;font-size:28px;letter-spacing:.2px}
-    p{color:#b6c2e0;line-height:1.55}
-    .row{display:flex;gap:16px;flex-wrap:wrap}
-    .card{flex:1 1 320px;min-width:280px}
-    .btn{cursor:pointer;border-radius:14px;padding:12px 16px;border:1px solid #ffffff22;background:#1f2b46;color:#e6eeff}
-    .btn:hover{transform:translateY(-1px)}
-    code{background:#0e1a2f;border:1px solid #13254a;color:#cfe1ff;border-radius:8px;padding:2px 6px}
-    .footer{opacity:.7;font-size:12px}
-    .sparkle{position:absolute;pointer-events:none;inset:0}
-  </style>
-</head>
-<body>
-  <div class="bg"></div>
-  <canvas class="sparkle" id="sparkle"></canvas>
-  <main style="position:relative;z-index:1;display:grid;place-items:center;min-height:100%;padding:40px;">
-    <section class="glass" style="max-width:980px;width:100%">
-      <div class="brand">
-        <div class="dot"></div>
-        <h1>Vibe IDE — Stable Edition</h1>
-      </div>
-      <p>Welcome! This is a playful, self-contained UI deployed to IBM Cloud Object Storage. It’s designed to be <em>functions-ready</em> —
-         when a Code Engine Function endpoint is available, just set it in <code>assets/env.js</code> (no other changes required).</p>
-
-      <div class="row">
-        <div class="card glass">
-          <h3 style="color:#dbeafe;margin-top:0">Quick Check</h3>
-          <p>Status ping uses either a local mock or your Code Engine Function.</p>
-          <button class="btn" onclick="window.Vibe.ping()">Ping Vibe</button>
-          <pre id="pingOut" style="white-space:pre-wrap;color:#a7f3d0"></pre>
-        </div>
-        <div class="card glass">
-          <h3 style="color:#dbeafe;margin-top:0">Remix Tools</h3>
-          <p>Try a tiny transform — this calls <code>/echo</code> on your function endpoint when present.</p>
-          <input id="echoIn" class="btn" placeholder="Type something…" style="width:100%;background:#0e1a2f;color:#e5e7eb;border:1px solid #22345d"/>
-          <div style="height:8px"></div>
-          <button class="btn" onclick="window.Vibe.echo()">Echo</button>
-          <pre id="echoOut" style="white-space:pre-wrap;color:#a7f3d0"></pre>
-        </div>
-      </div>
-
-      <p class="footer">Tip: set <code>window.__VIBE_ENV__.FUNCTION_BASE_URL</code> in <code>assets/env.js</code> to point at your Code Engine Function. No redeploy needed — just update the object.</p>
-    </section>
-  </main>
-
-  <script src="assets/env.js"></script>
-  <script src="assets/api.js"></script>
-  <script src="assets/ui.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><body><h1>Vibe IDE Stable Edition (Fixed)</h1></body></html>
